changed the realization